<resources>
    <string name="app_name">VacanceMaroc</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="decsription">Decsription :</string>
    <string name="address">Address :</string>
    <string name="textview">TextView</string>
    <string name="textview1">TextView</string>
    <string name="textview2">TextView</string>
</resources>
