<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ScrollView01"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.charfouni.karim.vacancemaroc.Main2Activity">

    <TextView
        android:id="@+id/tvName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:gravity="center"
        android:text="@string/textview"
        android:textColor="#000"
        android:textSize="30sp"
        android:textStyle="bold"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />
    <TextView
        android:id="@+id/titleDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/tvName"
        android:layout_marginLeft="11dp"
        android:layout_marginStart="11dp"
        android:layout_marginTop="22dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/decsription"
        android:textColor="#8B0000"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/titleDescription"
        android:fontFamily="sans-serif"
        android:padding="5dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:text="@string/textview1"
        android:textColor="#000"
        android:textSize="18sp"
        android:textStyle="bold" />/>

    <android.support.v4.view.ViewPager
        android:id="@+id/viewPager"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_below="@+id/tvDescription"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp" />

    <LinearLayout

        android:id="@+id/sliderDots"
        android:layout_below="@+id/viewPager"
        android:layout_marginTop="17dp"
        android:orientation="horizontal"
        android:gravity="center_vertical|center_horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"></LinearLayout>


    <TextView
        android:id="@+id/tvAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/titleAddress"
        android:fontFamily="sans-serif"
        android:padding="5dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:text="@string/textview2"
        android:textAllCaps="false"
        android:textColor="#000"
        android:textSize="18sp"
        android:textStyle="bold" />/>

    <TextView
        android:id="@+id/titleAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="17dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/address"
        android:textColor="#8B0000"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_below="@+id/sliderDots"
        android:layout_alignLeft="@+id/titleDescription"
        android:layout_alignStart="@+id/titleDescription"
         />

    <TextView
        android:id="@+id/tvInfosPerso"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvAddress"
        android:layout_marginTop="17dp"
        android:fontFamily="sans-serif-medium"
        android:text="Informations personnelles : "
        android:textColor="#8B0000"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_alignLeft="@+id/titleDescription"
        android:layout_alignStart="@+id/titleDescription"
        />

    <EditText

        android:id="@+id/etEmail"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvInfosPerso"
        android:layout_centerHorizontal="true"

        android:layout_marginTop="10dp"
        android:hint="Email"
        android:padding="5dp" />

    <EditText
        android:id="@+id/etPhone"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etEmail"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="Phone number"
        android:inputType="phone"
        android:padding="5dp" />

    <Button
        android:id="@+id/submit"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etPhone"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:gravity="center_vertical|center_horizontal"
        android:text="send" />


</RelativeLayout>
</ScrollView>